--- a/home.html
+++ b/home.html
@@ -2,8 +2,54 @@
 <html>
 <head>
 <style>
-
+.header{
+	background-color: black;
+	color: whitesmoke;
+	font-family: 'Courier New', Courier, monospace;
+	font-size: medium;
+	width: 100%;
+	text-align: center;
+}
+.mylist{
+	background-color:gray;
+	color:white;
+	font-family: 'Courier New', Courier, monospace;
+	font-size: small;
+	width: auto;
+	text-align: left;
+	margin: auto;
+	padding: 5%;
+}
+li{
+	background-color:gray;
+	color:white;
+	font-family: 'Courier New', Courier, monospace;
+	font-size: small;
+	width: 100%;
+	text-align: left;
+}
+p{
+	background-color:rgb(39, 1, 1);
+	color:white;
+	font-family: 'Courier New', Courier, monospace;
+	font-size: small;
+	width: auto;
+	text-align: left;
+	padding: 0.5%;
+}
 </style>
-
+<body>
+	<div class="header">
+		This is a Header.
+	</div>
+	<div class="mylist">
+		<p>Here Comes a list:</p>
+		<ul>
+			<li>element one</li>
+			<li>element two</li>
+			<li>element three</li>
+		</ul>
+	</div>
+</body>
 </head>
 </html>
