--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200&display=swap" rel="stylesheet">  
 <style>
 .header{
 	background-color: black;
